syntax = "proto3";

package foo;

message RequestMsg {
    string prefix = 1;
}

message ResponseMsg {
    string response = 1;
}

service FooService {
    rpc Foo(RequestMsg)
        returns (ResponseMsg);
    rpc FooStream(RequestMsg)
        returns (stream ResponseMsg);
}
